@@ -1,3 +1,6 @@
+2005-10-13 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: support dc:subject element in RSS for categories.
+
 2005-10-09 TADA Tadashi <sho@spc.gr.jp>
 	* README: fix about style file settings.
 
